parslers-benchmark/src/tests/invalid/semanticErr/expressions/intOpTypeErr.wacc
# expresission type mismatch bool->int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = true + false
end
